--- a/src/UI/users/Users.module.css
+++ b/src/UI/users/Users.module.css
@@ -6,7 +6,10 @@
 .container{
     display: flex;
     min-width: 400px;
-    /*margin: 5% 0 0 0;*/
     border: 2px solid red;
     flex-wrap: wrap;
+}
+
+.itemForm {
+    margin: 5% 0;
 }
